- Bugfix
+ New feature
===============================================================================

~~~~~~~~~
! v6.0.0:
~~~~~~~~~

! Assembly changes:
===================
! Updating System.Drawing.Common version to 6.0.0. On non-Windows systems this might be a breaking change.
  See the description of the DrawingModule.Initialize method for details.
* Updating KGySoft.CoreLibraries version

* KGySoft.Drawing namespace:
============================
* DrawingModule class: On non-Windows Systems the module initializer enables using System.Drawing types that depend
  on native GDI+ calls.

+ KGySoft.Drawing.Imaging namespace:
====================================
+ BitmapDataExtension class:
  + New Clip overloads to be able to specify whether the underlying bitmap data should be diposed when the returned
    instance is disposed.
+ Palette class:
  + New indexer (same as the GetColor method)
+ New GifEncoder class
+ New GifGraphicsDisposalMethod enum
+ New GifCompressionMode enum


~~~~~~~~~
* v5.3.1:
~~~~~~~~~

* Assembly changes:
===================
* Members are annotated for using C# 8.0 nullable references
* The module initializer initializes the resources.
+ Targeting also .NET 5.0

* KGySoft.Drawing namespace:
============================
+ New DrawingModule class: To be able to trigger module initialization without calling any specific feature.
* Icons class: Using non-locking caches

* KGySoft.Drawing.Imaging namespace:
====================================
- BitmapDataFactory class:
  - BeginLoad/LoadAsync methods: They didn't use the specified async configuration.
- BitmapDataExtensions class:
  - Clear/BeginClear/ClearAsync methods: They could throw a NullReferenceException if a custom IWritableBitmapData
    instance had indexed PixelFormat but its Palette was null. From now on even such bitmap data can be cleared but
    the specified color will be ignored and the data is always cleared with zero palette index.